# phddynamics

./: .gitignore  CMakeLists.txt  doxygenconf
doc/: .gitignore  doxygenconf
include/bullet/: BulletCreature.h  Exports.h  joint_bullet.h  mathDefs.h
include/kinematics/: joint.h  joint_io.h
include/pid/: pid.h
src/bullet/: CMakeLists.txt
src/bullet_integration/: BulletCreature.cpp  CMakeLists.txt
src/tests/bullet/: CMakeLists.txt  Main.cpp  TestApplication.cpp  TestApplication.h
src/tests/kinematics/: CMakeLists.txt  Main.cpp  tools.h
src/tests/pid/: CMakeLists.txt
tests/bullet/: RobotLoad.txt  RobotLoadComplex.txt
tests/kinematics/io/: Robot0.txt  RobotLoad.txt  RobotTag.txt
